# sample-api-application

./: .gitignore  README.md  pyproject.toml
src/: db.sqlite3
src/costdates/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/costdates/migrations/: 0001_initial.py
src/djangoApiApp/: settings.py  urls.py
src/products/: models.py  serializers.py  views.py
src/products/migrations/: 0001_initial.py
